--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	"require": {
 		"facebook/webdriver": "dev-master",
 		"symfony/console": "*",
-		"phpunit/phpunit": "4.1.*"
+		"phpunit/phpunit": "4.1.*",
+		"brianium/paratest": "dev-master"
 	},
 	"require-dev": {
         "phpdocumentor/phpdocumentor": "2.*"
